--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -5,6 +5,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.1"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
