--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,5 +7,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0"/>
   </ItemGroup>
 </Project>
